--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "ng": "ng",
     "start": "ng serve -H 0.0.0.0 --disable-host-check --sourcemap",
     "pack-properties": "ng-packagr -p properties/package.json",
+    "pack-three": "ng-packagr -p viewer/three/package.json",
     "pack-all": "npm run pack-properties",
     "test": "ng test",
     "lint": "ng lint",
@@ -25,6 +26,7 @@
     "@angular/platform-browser": "5.2.0",
     "@angular/platform-browser-dynamic": "5.2.0",
     "@angular/router": "5.2.0",
+    "@blang/properties": "file:ext/blang-properties-0.1.0-SNAPSHOT",
     "@ngrx/store": "5.0.0",
     "@types/three": "0.91.0",
     "chart.js": "2.7.1",
@@ -48,7 +50,7 @@
     "@angular/compiler-cli": "5.2.0",
     "@types/jasmine": "2.5.53",
     "@types/jasminewd2": "2.0.2",
-    "@types/node": "6.0.60",
+    "@types/node": "^6.0.60",
     "codelyzer": "4.0.1",
     "jasmine-core": "2.6.4",
     "jasmine-spec-reporter": "4.1.1",
