--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve -H 0.0.0.0 --disable-host-check --sourcemap",
-    "pack-properties": "ng-packagr -p properties/package.json",
-    "pack-three": "ng-packagr -p viewer/three/package.json",
+    "pack-properties": "ng-packagr -p modules/properties/package.json",
     "pack-all": "npm run pack-properties",
     "test": "ng test",
     "lint": "ng lint",
