--- a/modules/properties/package.json
+++ b/modules/properties/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "@blang/viewer-three",
+  "name": "@blang/properties",
   "version": "0.1.0",
   "license": "MIT",
   "ngPackage": {
     "$schema": "../../node_modules/ng-packagr/ng-package.schema.json",
-    "dest": "../../ext/blang-viewer-three-0.1.0-SNAPSHOT",
+    "dest": "../../ext/blang-properties-0.1.0-SNAPSHOT",
     "lib": {
       "entryFile": "src/public_api.ts"
     }
