--- a/modules/properties/package.json
+++ b/modules/properties/package.json
@@ -4,7 +4,7 @@
   "license": "MIT",
   "ngPackage": {
     "$schema": "../../node_modules/ng-packagr/ng-package.schema.json",
-    "dest": "../../ext/blang-properties-0.1.0-SNAPSHOT",
+    "dest": "../../package/blang-properties-0.1.0-SNAPSHOT",
     "lib": {
       "entryFile": "src/public_api.ts"
     }
