--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "@angular/platform-browser": "5.2.0",
     "@angular/platform-browser-dynamic": "5.2.0",
     "@angular/router": "5.2.0",
-    "@blang/properties": "file:ext/blang-properties-0.1.0-SNAPSHOT",
+    "@blang/properties": "file:package/blang-properties-0.1.0-SNAPSHOT",
     "@ngrx/store": "5.0.0",
     "@types/three": "0.91.0",
     "chart.js": "2.7.1",
