--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "@angular/common": "5.2.0",
     "@angular/compiler": "5.2.0",
     "@angular/core": "5.2.0",
-    "@angular/flex-layout": "^5.0.0-beta.13",
+    "@angular/flex-layout": "5.0.0-beta.13",
     "@angular/forms": "5.2.0",
     "@angular/http": "5.2.0",
     "@angular/material": "5.2.0",
@@ -32,7 +32,7 @@
     "core-js": "2.5.1",
     "font-awesome": "4.7.0",
     "fullcalendar": "3.5.1",
-    "hammerjs": "^2.0.8",
+    "hammerjs": "2.0.8",
     "intl": "1.2.5",
     "jquery": "3.2.1",
     "moment": "2.18.1",
