--- a/.drone.yml
+++ b/.drone.yml
@@ -26,7 +26,7 @@ pipeline:
     artifact_id: tech.brewlabs.blang
     version: 0.1.0-SNAPSHOT
     files:
-      - package/*tar.gz
+      - package/*.tgz
     force_upload: true
     secrets: [ artifactory_url, artifactory_username, artifactory_password ]
     when:
