Update npm project name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@blang/properties-demo",
+  "name": "@blang/demo",
   "version": "0.1.0-SNAPSHOT",
   "license": "MIT",
   "scripts": {
