--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "ng-packagr": "^2.4.2",
     "protractor": "5.1.2",
     "ts-node": "3.2.0",
+    "node-sass": "4.9.0",
     "tslint": "5.7.0",
     "typescript": "2.4.2"
   }
